Forgot password view update -> implement UIDelegate

--- a/iOSCommonUI/ForgotPassword/ForgotPasswordView.xib
+++ b/iOSCommonUI/ForgotPassword/ForgotPasswordView.xib
@@ -15,7 +15,12 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordView" customModule="iOSCommonUI" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordView" customModule="iOSCommonUI" customModuleProvider="target">
+            <connections>
+                <outlet property="tfEmail" destination="1Zg-By-q0B" id="YOx-IA-MoS"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="fqS-9U-Q6L"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="ForgotPasswordView" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -140,7 +145,7 @@ Password</string>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <connections>
-                <outlet property="tfEmail" destination="1Zg-By-q0B" id="khc-Fu-xUP"/>
+                <outlet property="tfEmail" destination="1Zg-By-q0B" id="QYw-Sg-iuX"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="53.5"/>
         </view>
