--- a/iOSCommonUI/ForgotPassword/ForgotPasswordView.xib
+++ b/iOSCommonUI/ForgotPassword/ForgotPasswordView.xib
@@ -30,7 +30,7 @@
                     <rect key="frame" x="30" y="80" width="315" height="420"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHc-kw-Cem">
-                            <rect key="frame" x="8" y="8" width="146" height="89.5"/>
+                            <rect key="frame" x="8" y="8" width="164" height="86.5"/>
                             <string key="text">Forgot 
 Password</string>
                             <fontDescription key="fontDescription" name="Hermes-Thin" family="Hermes-Thin" pointSize="37"/>
@@ -38,14 +38,14 @@ Password</string>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gmj-7v-fMj">
-                            <rect key="frame" x="8" y="138.5" width="299" height="67"/>
+                            <rect key="frame" x="8" y="135.5" width="299" height="67"/>
                             <string key="text">Please enter your email address. You will receive a new generated password via email. We recommend that you update your password once you login.</string>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YiL-7i-vh7">
-                            <rect key="frame" x="0.0" y="255.5" width="315" height="65"/>
+                            <rect key="frame" x="0.0" y="252.5" width="315" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EMAIL ADDRESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z72-4R-nxj">
                                     <rect key="frame" x="8" y="8" width="102" height="16"/>
@@ -53,15 +53,6 @@ Password</string>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="straigharrow@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Zg-By-q0B">
-                                    <rect key="frame" x="8" y="27" width="299" height="30"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="apt-fb-JPa"/>
-                                    </constraints>
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" textContentType="email"/>
-                                </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mzW-0d-THD">
                                     <rect key="frame" x="8" y="56" width="299" height="1"/>
                                     <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,6 +60,20 @@ Password</string>
                                         <constraint firstAttribute="height" constant="0.5" id="hGe-UG-t8t"/>
                                     </constraints>
                                 </view>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="straigharrow@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Zg-By-q0B" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
+                                    <rect key="frame" x="8" y="27" width="299" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="apt-fb-JPa"/>
+                                    </constraints>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits" textContentType="email"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                            <color key="value" red="0.64569597216420072" green="0.64715113709503935" blue="0.66935675756598978" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </textField>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
@@ -87,7 +92,7 @@ Password</string>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u2s-f1-j1h">
                             <rect key="frame" x="0.0" y="357" width="315" height="55"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0i-d1-OFw" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0i-d1-OFw" customClass="DesignableButton" customModule="iOSCommonUI">
                                     <rect key="frame" x="8" y="0.0" width="180" height="55"/>
                                     <color key="backgroundColor" red="0.97174853090000002" green="0.65032738450000005" blue="0.12223779410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
