--- a/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
+++ b/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -45,16 +46,16 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zse-ch-S9Z">
-                    <rect key="frame" x="25" y="70" width="270" height="341.5"/>
+                    <rect key="frame" x="25" y="70" width="270" height="343"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yj-A5-VUG">
-                            <rect key="frame" x="8" y="8" width="97" height="45.5"/>
+                            <rect key="frame" x="8" y="8" width="91" height="47"/>
                             <fontDescription key="fontDescription" name="Hermes-Thin" family="Hermes-Thin" pointSize="39"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tai-hL-gsc">
-                            <rect key="frame" x="0.0" y="88.5" width="270" height="65"/>
+                            <rect key="frame" x="0.0" y="90" width="270" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EMAIL ADDRESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErA-uI-LjO">
                                     <rect key="frame" x="8" y="8" width="102" height="16"/>
@@ -62,7 +63,7 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="straigharrow@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKN-J0-pdd" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="straightarrow@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKN-J0-pdd" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
                                     <rect key="frame" x="8" y="27" width="254" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="miP-Wx-V1D"/>
@@ -98,7 +99,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bbj-3h-KJg">
-                            <rect key="frame" x="0.0" y="163.5" width="270" height="65"/>
+                            <rect key="frame" x="0.0" y="165" width="270" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PASSWORD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKw-Rc-sdA">
                                     <rect key="frame" x="8" y="8" width="73" height="16"/>
@@ -142,7 +143,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxR-h3-9G1">
-                            <rect key="frame" x="0.0" y="278.5" width="270" height="55"/>
+                            <rect key="frame" x="0.0" y="280" width="270" height="55"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQe-i5-GC9" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
                                     <rect key="frame" x="155.5" y="0.0" width="107.5" height="55"/>
